--- a/src/components/sections/NavBar/Navigation/Navigation.scss
+++ b/src/components/sections/NavBar/Navigation/Navigation.scss
@@ -1,14 +1,29 @@
-a {
+nav {
+	// 	width: 100%;
+	position: sticky;
+	z-index: 10;
+	top: 0;
+	// 	padding: 1.2em 0;
+	// 	color: black;
+	background-color: white;
+	// 	max-height: 4em;
+}
+
+nav span {
+	cursor: pointer;
 	position: relative;
 	color: 000;
 	text-decoration: none;
+	font-size: 18px;
+	transition-delay: 0.15s;
+	padding-bottom: 0.3em;
 }
 
-a:hover {
+nav span:hover {
 	color: #000;
 }
 
-a::before {
+nav span::before {
 	content: '';
 	position: absolute;
 	display: block;
@@ -21,6 +36,6 @@ a::before {
 	transition: all 0.3s ease;
 }
 
-a:hover::before {
+nav span:hover::before {
 	transform: scaleX(1);
 }
