--- a/src/components/sections/Service/FlipCard.scss
+++ b/src/components/sections/Service/FlipCard.scss
@@ -1,11 +1,9 @@
-.container {
-	height: 100vh;
-}
-
 .flip-card-outer {
-	width: 300px;
-	height: 400px;
-	margin: 25px 0;
+	height: 10rem;
+	@media screen and (min-width: 640px) {
+		height: 15rem;
+	}
+	width: 100%;
 
 	.flip-card-inner {
 		transform-style: preserve-3d;
@@ -32,14 +30,12 @@
 
 			&.front {
 				transform: rotateY(0);
-				background-color: #2d2d2d;
 				color: #fff;
 			}
 
 			&.back {
 				transform: rotateY(180deg);
 				background-color: #fff;
-				color: #2d2d2d;
 			}
 		}
 	}
