added trustpilot button

--- a/src/components/sections/Service/FlipCard.scss
+++ b/src/components/sections/Service/FlipCard.scss
@@ -5,6 +5,9 @@
 	}
 	width: 100%;
 
+	outline: none;
+	cursor: pointer;
+
 	.flip-card-inner {
 		transform-style: preserve-3d;
 		transition: 0.5s linear 0.1s;
