added Flyer download

--- a/src/components/sections/Announcement/Announcement.module.scss
+++ b/src/components/sections/Announcement/Announcement.module.scss
@@ -1,5 +1,5 @@
 .root{
   .gradient {
-    background: linear-gradient(351deg, #FF6433 0%, #daae51 100%);
+    // background: linear-gradient(351deg, #FF6433 0%, #daae51 100%);
   }
 }
